  the page content.
* #1884, #1885: plug-in html themes cannot inherit another plug-in theme. Thanks to
  Suzumizaki.
* #1818: `sphinx.ext.todo` directive generates broken html class attribute as
  'admonition-' when :confval:`language` is specified with non-ASCII linguistic area like
  'ru' or 'ja'. To fix this, now ``todo`` directive can use ```:class:`` option.

Release 1.3.1 (released Mar 17, 2015)
=====================================

Bugs fixed
----------

* #1769: allows generating quickstart files/dirs for destination dir that
  doesn't overwrite existent files/dirs. Thanks to WAKAYAMA shirou.
* #1773: sphinx-quickstart doesn't accept non-ASCII character as a option argument.
* #1766: the message "least Python 2.6 to run" is at best misleading.
* #1772: cross reference in docstrings like ``:param .write:`` breaks building.
* #1770, #1774: ``literalinclude`` with empty file occurs exception. Thanks to
  Takayuki Hirai.
* #1777: Sphinx 1.3 can't load extra theme. Thanks to tell-k.
* #1776: ``source_suffix = ['.rst']`` cause unfriendly error on prior version.
* #1771: automated .mo building doesn't work properly.
* #1783: Autodoc: Python2 Allow unicode string in __all__.
  Thanks to Jens Hedegaard Nielsen.
* #1781: Setting `html_domain_indices` to a list raises a type check warnings.


Release 1.3 (released Mar 10, 2015)
===================================

Incompatible changes
--------------------

* Roles ``ref``, ``term`` and ``menusel`` now don't generate :durole:`emphasis`
  nodes anymore.  If you want to keep italic style, adapt your stylesheet.
* Role ``numref`` uses ``%s`` as special character to indicate position of
  figure numbers instead ``#`` symbol.

Features added
--------------

* Add convenience directives and roles to the C++ domain:
  directive ``cpp:var`` as alias for ``cpp:member``, role ``:cpp:var`` as alias
  for ``:cpp:member``, and role `any` for cross-reference to any C++
  declaraction. #1577, #1744