@@ -70,6 +70,7 @@ Bugs fixed
 * #1818: `sphinx.ext.todo` directive generates broken html class attribute as
   'admonition-' when :confval:`language` is specified with non-ASCII linguistic area like
   'ru' or 'ja'. To fix this, now ``todo`` directive can use ```:class:`` option.
+* #2140: Fix footnotes in table has broken in LaTeX
 
 Release 1.3.1 (released Mar 17, 2015)
 =====================================
